Update from https://github.com/JellyZhang/jellyblog/commit/fa98b96f2e81ae4dde7d3e7dab2dceed03afb860

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>Jelly&#39;s Blog</title><meta name="Description" content=""><meta property="og:title" content="Jelly&#39;s Blog" />
-<meta property="og:description" content="" />
+        <title>Jelly&#39;s Blog</title><meta name="Description" content="Jelly&#39;s Blog. Jelly的个人博客"><meta property="og:title" content="Jelly&#39;s Blog" />
+<meta property="og:description" content="Jelly&#39;s Blog. Jelly的个人博客" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://jellyzhang.github.io/" /><meta property="og:image" content="https://jellyzhang.github.io/logo.png"/>
 
@@ -15,7 +15,7 @@
 <meta name="twitter:image" content="https://jellyzhang.github.io/logo.png"/>
 
 <meta name="twitter:title" content="Jelly&#39;s Blog"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="Jelly&#39;s Blog. Jelly的个人博客"/>
 <meta name="application-name" content="Jelly&#39;s Blog">
 <meta name="apple-mobile-web-app-title" content="Jelly&#39;s Blog"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -27,7 +27,7 @@
         "url": "https:\/\/jellyzhang.github.io\/","inLanguage": "zh-CN","author": {
                 "@type": "Person",
                 "name": "Jelly"
-            },"image": "https:\/\/jellyzhang.github.io\/images\/Apple-Devices-Preview.png","thumbnailUrl": "https:\/\/jellyzhang.github.io\/images\/screenshot.png","license": "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.","name": "Jelly's Blog"
+            },"description": "Jelly's Blog. Jelly的个人博客","image": "https:\/\/jellyzhang.github.io\/images\/Apple-Devices-Preview.png","thumbnailUrl": "https:\/\/jellyzhang.github.io\/images\/screenshot.png","license": "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.","name": "Jelly's Blog"
     }
     </script></head>
     <body header-desktop="fixed" header-mobile="auto"><script type="text/javascript">(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
